--- a/src/scss/ultilities/_globals.scss
+++ b/src/scss/ultilities/_globals.scss
@@ -28,7 +28,7 @@
     --color-accent-800: #009fbb; 
     --color-accent-900: #009fbb; 
 
-    --color-light: #efe4d8; 
+    --color-light: #fff; 
     --color-light-200: #efe4d8; 
     --color-light-300: #efe4d8; 
     --color-light-400: #efe4d8; 
