--- a/src/scss/ultilities/_globals.scss
+++ b/src/scss/ultilities/_globals.scss
@@ -38,6 +38,9 @@
     --color-light-800: #efe4d8; 
     --color-light-900: #efe4d8; 
 
+    //containers 
+    --grid-container: minmax(32px, 1fr) minmax(0, 75rem) minmax(32px, 1fr)
+
    
    
     --font-sans: 'arial', sans-serif; 
