--- a/style.css
+++ b/style.css
@@ -119,6 +119,51 @@ li {
 }
 .hero__inner {
   background-color: #000;
+  display: grid;
+  grid-template-rows: 100px 1fr 100px;
+  grid-template-areas: "hero-header" "hero-main" "hero-footer";
+  align-items: center;
+}
+.hero__main {
+  grid-area: hero-main;
+  padding: var(--gap-m) var(--gap-xl);
+}
+.hero__footer {
+  grid-area: hero-footer;
+  display: flex;
+  justify-content: space-between;
+  padding: o var(--gap-m);
+}
+.hero__content {
+  max-width: 50rem;
+  width: 100%;
+  min-height: 400px;
+  background-color: yellow;
+}
+.hero__prev-link {
+  display: block;
+  max-width: 250px;
+  width: 100%;
+  min-height: 40px;
+  background-color: yellow;
+}
+.hero__pagination {
+  display: block;
+  max-width: 250px;
+  width: 100%;
+  min-height: 40px;
+  background-color: yellow;
+}
+.hero__social {
+  max-width: 250px;
+  width: 100%;
+  min-height: 40px;
+  background-color: red;
+  position: absolute;
+  right: var(--gap-m);
+  top: 40%;
+  transform: rotate(-90deg) translateX(50%);
+  transform-origin: bottom right;
 }
 
 /*# sourceMappingURL=style.css.map */
