--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -1,7 +1,18 @@
 
 
 .menu { 
-    width: 640px;
-    height: 45px;
     background-color: pink;
+    display: flex;
+    justify-content: flex-end;
+    gap: var(--gap-l);
+
+
+    &__list {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        gap: var(--gap-l);
+    }
 }
