--- a/src/scss/pages/home/_hero.scss
+++ b/src/scss/pages/home/_hero.scss
@@ -33,7 +33,7 @@
     &__content {
         max-width: 50rem;
         width: 100%;
-        min-height: 400px;
+       
         background-color: yellow;
     }
 
@@ -46,19 +46,14 @@
     }
 
     &__pagination {
-        display: block;
-        max-width: 250px;
-        width: 100%;
-        min-height: 40px;
+        align-items: center;
+        display: flex;
+        gap: var(--gap-s);
         background-color: yellow;
     }
 
     &__social {
-        
-        max-width: 250px;
-        width: 100%;
-        min-height: 40px;
-        background-color:red;
+         background-color:red;
         position: absolute;
         right: var(--gap-m);
         top: 40%;
@@ -66,4 +61,21 @@
         transform-origin: bottom right ;
 
     }
+
+    .counter {
+
+        &__total {
+            &::before {
+              content: '/';
+            }
+        }
+    }
+}
+
+.social {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 2rem;
 }
