--- a/style.css
+++ b/style.css
@@ -106,9 +106,18 @@ li {
 }
 
 .menu {
-  width: 640px;
-  height: 45px;
   background-color: pink;
+  display: flex;
+  justify-content: flex-end;
+  gap: var(--gap-l);
+}
+.menu__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: var(--gap-l);
 }
 
 .hero {
@@ -137,7 +146,6 @@ li {
 .hero__content {
   max-width: 50rem;
   width: 100%;
-  min-height: 400px;
   background-color: yellow;
 }
 .hero__prev-link {
@@ -148,22 +156,29 @@ li {
   background-color: yellow;
 }
 .hero__pagination {
-  display: block;
-  max-width: 250px;
-  width: 100%;
-  min-height: 40px;
+  align-items: center;
+  display: flex;
+  gap: var(--gap-s);
   background-color: yellow;
 }
 .hero__social {
-  max-width: 250px;
-  width: 100%;
-  min-height: 40px;
   background-color: red;
   position: absolute;
   right: var(--gap-m);
   top: 40%;
   transform: rotate(-90deg) translateX(50%);
   transform-origin: bottom right;
+}
+.hero .counter__total::before {
+  content: "/";
+}
+
+.social {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
