video, lates uppdate

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,9 +1,11 @@
+@use '../components/buttons' as button; 
 
 body {
     font-family: var (--font-sans);
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-serif);
+  font-weight: 400;
 
 }
 
@@ -47,4 +49,8 @@ a {
 
 li {
     line-height: var (--line-height);
+}
+
+.button {
+    @include button.default;
 }
