--- a/src/scss/pages/home/_hero.scss
+++ b/src/scss/pages/home/_hero.scss
@@ -1,8 +1,12 @@
+@use '../../components/buttons' as button;
+
 .hero {
     background-color:var(--color-light);
     height: 100vh;
     display: grid;
     padding: 2rem;
+    color: var(--color-light);
+  
 
     &__inner {
         background-color:#000 ; //temp
@@ -13,12 +17,25 @@
         'hero-main'
         'hero-footer';
         align-items: center;
+       position: relative;
+        
+    }
+
+    &__video { 
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+        object-fit: cover;
+
         
     }
 
     &__main {
         grid-area: hero-main;
         padding: var(--gap-m) var(--gap-xl);
+        position: relative;
         
 
     }
@@ -28,37 +45,69 @@
         display: flex;
         justify-content: space-between;
         padding: o var(--gap-m);
+        position: relative;
     }
 
     &__content {
         max-width: 50rem;
         width: 100%;
        
-        background-color: yellow;
+       
+        
+
     }
 
     &__prev-link {
-        display: block;
-        max-width: 250px;
-        width: 100%;
-        min-height: 40px;
-        background-color: yellow;
+       @include button.default;
+       opacity: 0.54;
+       font-family: var(--font-serif);
+       font-size: var(--font-size-1);
+       
     }
 
     &__pagination {
         align-items: center;
         display: flex;
         gap: var(--gap-s);
-        background-color: yellow;
+        flex: 1;
+
+
+        &::before {
+            content: '';
+            display: block;
+            height: 1px;
+            flex: 1;
+            background-color: var(--color-light);
+            opacity: 0.34;
+            margin: 0 8vw;
+        }
+       
     }
 
     &__social {
-         background-color:red;
+     
         position: absolute;
         right: var(--gap-m);
         top: 40%;
         transform: rotate(-90deg) translateX(50%);
         transform-origin: bottom right ;
+        display: flex;
+        align-items: center;
+
+
+
+        &::before, 
+        &::after {
+            content: '';
+            display: block;
+            height: 1px;
+            width: 12vh;
+            background-color: var(--color-light);
+            opacity: 0.34; 
+            margin: 0 var(--gap-l);
+
+
+        }
 
     }
 
@@ -72,10 +121,43 @@
     }
 }
 
+.destination {
+
+    &__category {
+        font-size: var(--font-size-2);
+        margin-bottom: var(--gap-m);
+        display: block;
+        color: var(--color-dark-700);
+    }
+
+    &__title {
+        font-size: 5.25rem;
+        margin: 0;
+       
+    }
+
+    &__subtitle {
+        font-size: var(--font-size-4);
+        font-style: italic;
+        font-weight: 300;
+        margin: 0;
+        color: var(--color-accent);
+    }
+
+    &__button {
+     @include button.default ($icon-opacity:0.34);
+     margin-top: var(--gap-xl)
+    }
+}
+
 .social {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     gap: 2rem;
+
+    &__link {
+        color: var(--color-light);
+    }
 }
