--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,19 +1,27 @@
-@mixin default ($background:var(--color-dark), $color:var(--color-light), 
-$hover-background: var(--color-accent), 
-$hover-color: var(--color-light)
+@mixin default ($background: transparent, $color:var(--color-light), 
+$hover-background: transparent , 
+$hover-color: var(--color-light),
+$icon-opacity: 1
  ) {
     background-color: $background;
     color: $color;
-    padding: 1rem 2rem;
     border: 0;
-    border-radius: 2rem;
-    font-size: 1rem;
-    font-weight: 700;
+    padding: 0;
+    font-size: var(--font-size-2);
     display: inline-block;
     text-decoration: none;
-    &:hover{
-        background-color: $hover-background;
-        color: $hover-color;
-    }
+    display: flex;
+   align-items: center;
+    gap: var(--gap-s);
+   
 
+  
+    svg {
+        opacity: $icon-opacity;
+    }
+  
+   &:hover {
+    background-color: $hover-background;
+    color: $hover-color;
+   }
 }
