--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -1,11 +1,25 @@
-
+@use '../components/buttons' as button;
 
 .menu { 
-    background-color: pink;
+  
     display: flex;
     justify-content: flex-end;
     gap: var(--gap-l);
+    position: relative;
 
+    &::before {
+            position: absolute;
+            content: '';
+            display: block;
+            height: 1px;
+            max-width: 140px;
+            width: 100%;
+            background-color: var(--color-light);
+            opacity: 0.34;
+            margin: 0 var(--gap-xl) 0 0;
+            right: 100%;
+            top: 50%;
+        }
 
     &__list {
         list-style: none;
@@ -15,4 +29,21 @@
         align-items: center;
         gap: var(--gap-l);
     }
+
+   &__link {
+    color: var(--color-light);
+    font-size: var(--font-size-2);
+   }
+
+   &__button {
+    @include button.default;
+   }
+
+   &__item {
+
+    &--current {
+        font-weight: 600;
+    }
+    
+   }
 }
