hambyrger, hover effects

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -8,10 +8,9 @@ $icon-opacity: 1
     border: 0;
     padding: 0;
     font-size: var(--font-size-2);
-    display: inline-block;
     text-decoration: none;
-    display: flex;
-   align-items: center;
+    display: inline-flex;
+    align-items: center;
     gap: var(--gap-s);
    
 
