--- a/style.css
+++ b/style.css
@@ -114,6 +114,11 @@ li {
   padding: 0 var(--gap-xl);
   z-index: 999;
 }
+@media screen and (max-width: 40rem) {
+  .site-header {
+    padding: 0 var(--gap-l);
+  }
+}
 .site-header__inner {
   display: flex;
   justify-content: space-between;
@@ -142,6 +147,11 @@ li {
   right: 100%;
   top: 50%;
 }
+@media screen and (max-width: 62.5rem) {
+  .menu::before {
+    display: none;
+  }
+}
 .menu__list {
   list-style: none;
   margin: 0;
@@ -149,6 +159,11 @@ li {
   display: flex;
   align-items: center;
   gap: var(--gap-l);
+}
+@media screen and (max-width: 55rem) {
+  .menu__list {
+    display: none;
+  }
 }
 .menu__link {
   color: var(--color-light);
@@ -229,6 +244,11 @@ li {
   padding: 2rem;
   color: var(--color-light);
 }
+@media screen and (max-width: 62.5rem) {
+  .hero {
+    padding: 16px;
+  }
+}
 .hero__inner {
   background-color: #000;
   display: grid;
@@ -249,6 +269,11 @@ li {
   grid-area: hero-main;
   padding: var(--gap-m) var(--gap-xl);
   position: relative;
+}
+@media screen and (max-width: 30rem) {
+  .hero__main {
+    padding: var(--gap-m) var(--gap-m);
+  }
 }
 .hero__footer {
   grid-area: hero-footer;
@@ -283,6 +308,11 @@ li {
   background-color: transparent;
   color: var(--color-light);
 }
+@media screen and (max-width: 40rem) {
+  .hero__prev-link {
+    display: none;
+  }
+}
 .hero__prev-link svg path {
   transition: fill 0.2s;
 }
@@ -307,14 +337,25 @@ li {
   opacity: 0.34;
   margin: 0 8vw;
 }
-.hero__pagination .button--next #union_1, .hero__pagination .button--next #union_2,
-.hero__pagination .button--prev #union_1,
-.hero__pagination .button--prev #union_2 {
+@media screen and (max-width: 40rem) {
+  .hero__pagination::before {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 30rem) {
+  .hero__pagination .button--next,
+  .hero__pagination .button--prev {
+    max-width: 2rem;
+  }
+}
+.hero__pagination .button--next #Union_1, .hero__pagination .button--next #Union_2,
+.hero__pagination .button--prev #Union_1,
+.hero__pagination .button--prev #Union_2 {
   transition: all 0.2s;
 }
-.hero__pagination .button--next.hover #union_1, .hero__pagination .button--next.hover #union_2,
-.hero__pagination .button--prev.hover #union_1,
-.hero__pagination .button--prev.hover #union_2 {
+.hero__pagination .button--next:hover #Union_1, .hero__pagination .button--next:hover #Union_2,
+.hero__pagination .button--prev:hover #Union_1,
+.hero__pagination .button--prev:hover #Union_2 {
   fill: var(--color-accent);
 }
 .hero__social {
@@ -335,25 +376,38 @@ li {
   opacity: 0.34;
   margin: 0 var(--gap-l);
 }
+.hero .counter {
+  white-space: nowrap;
+}
 .hero .counter__total::before {
   content: "/";
 }
 
+.destination {
+  padding-right: var(--gap-m);
+}
 .destination__category {
   font-size: var(--font-size-2);
   margin-bottom: var(--gap-m);
   display: block;
   color: var(--color-dark-700);
 }
+@media screen and (max-width: 40rem) {
+  .destination__category {
+    font-size: var(--font-size-1);
+  }
+}
 .destination__title {
   font-size: 5.25rem;
+  font-size: clamp 3rem, 10vw, 5.25rem;
   margin: 0;
 }
 .destination__subtitle {
   font-size: var(--font-size-4);
+  font-size: clamp(var(--font-size-2), 8vw, var(--font-size-4));
   font-style: italic;
   font-weight: 300;
-  margin: 0;
+  margin: 0.5rem 0 0 0;
   color: var(--color-accent);
 }
 .destination__button {
@@ -374,6 +428,11 @@ li {
 .destination__button:hover {
   background-color: transparent;
   color: var(--color-light);
+}
+@media screen and (max-width: 40rem) {
+  .destination__button {
+    font-size: var(--font-size-1);
+  }
 }
 .destination__button svg {
   transition: all 0.2s;
